moved internal headers to include/internal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 add_compile_options(-std=c++11)
 
-include_directories(include)
-set(HEADER_FILES include/kendall.h include/grank.h include/pprInternal.h 
-include/pprSingleSource.h)
+include_directories(include include/internal)
+
+set(HEADER_FILES include/internal/kendall.h include/grank.h include/internal/pprInternal.h 
+include/internal/pprSingleSource.h)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -flto -march=native")
 project (ppr)
