improved building and differentiated between make and make tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required (VERSION 2.6)
 add_compile_options(-std=c++11)
 
 include_directories(include include/internal)
-
-set(HEADER_FILES include/internal/kendall.h include/grank.h include/internal/pprInternal.h 
+set(INTERNAL_HEADER_FILES include/internal/kendall.h include/internal/pprInternal.h 
 include/internal/pprSingleSource.h)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -flto -march=native")
+set(HEADER_FILES include/grank.h include/benchmarkAlgorithm.h)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native")
+set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 project (ppr)
 
-add_executable(ppr src/main.cc ${HEADER_FILES})
+#########main build
+add_executable(ppr src/main.cc ${HEADER_FILES} ${INTERNAL_HEADER_FILES})
 
-set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
 
 # Download and unpack googletest at configure time
@@ -37,7 +37,15 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
                       "${gmock_SOURCE_DIR}/include")
 endif()
 
-#build test
-#add_executable(probTest test/CountMinSketchTest.cc src/MurmurHash3.cc)
-#target_link_libraries(probTest gtest gtest_main)
-#add_test(probTest probTest)
+
+#########test
+include_directories(googletest-src/googletest/include/gtest)
+add_executable(pprTest test/internal/jaccardTest.cc ${HEADER_FILES} ${INTERNAL_HEADER_FILES})
+target_link_libraries(pprTest gtest gtest_main)
+add_test(pprTest pprTest)
+#make it so that "make tests" will build pprTest and gtest
+add_custom_target(tests)
+add_dependencies(tests pprTest)
+add_dependencies(pprTest gtest gtest_main gmock gmock_main)
+#exclude pprTest and gtest stuff from "make"
+set_target_properties(pprTest gtest gtest_main gmock gmock_main PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
