--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+googletest-build
+googletest-download
+googletest-src 
+googletest-build
 
 # Prerequisites
 *.d
