added tests for header only version of mc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(pprTest test/internal/jaccardTest.cc test/internal/keepTopTest.cc
 test/internal/pprSingleSourceTest.cc test/grankTest.cc test/benchmarkAlgorithmTest.cc
 test/grankHeaderOnlyTest.cc
 test/mccompletepathv2Test.cc
+test/mccompletepathv2HeaderOnlyTest.cc
 ${HEADER_FILES} ${INTERNAL_HEADER_FILES})
 target_link_libraries(pprTest gtest gtest_main)
 add_test(pprTest pprTest)
