--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ add_compile_options(-std=c++11)
 include_directories(include include/internal)
 set(INTERNAL_HEADER_FILES include/internal/kendall.h include/internal/pprInternal.h 
 include/internal/pprSingleSource.h)
-set(HEADER_FILES include/grank.h include/benchmarkAlgorithm.h include/mccompletepathv2.h include/grankMulti.h)
+set(HEADER_FILES include/grank.h include/benchmarkAlgorithm.h include/mccompletepathv2.h header-only/grankMulti.h)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native -pthread")
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 project (ppr)
