--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 add_compile_options(-std=c++11)
 
-include_directories(include include/internal)
+include_directories(include include/internal header-only)
 set(INTERNAL_HEADER_FILES include/internal/kendall.h include/internal/pprInternal.h 
 include/internal/pprSingleSource.h)
 set(HEADER_FILES include/grank.h include/benchmarkAlgorithm.h include/mccompletepathv2.h header-only/grankMulti.h)
