--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(include include/internal header-only)
 set(INTERNAL_HEADER_FILES include/internal/kendall.h include/internal/pprInternal.h 
 include/internal/pprSingleSource.h)
 set(HEADER_FILES include/grank.h include/benchmarkAlgorithm.h include/mccompletepathv2.h header-only/grankMulti.h)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native -lpthread")
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 project (ppr)
 
